@@ -126,6 +126,7 @@ conditions:
 .IP "21 File lock error"
 .IP "22 Memory allocation error"
 .IP "23 Thread error"
+.IP "24 Database error"
 .PP
 .SH SIGNAL HANDLING
 SIGTERM is ignored, use SIGKILL to terminate aide.
