@@ -1,3 +1,6 @@
+2023-12-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Handle an incomplete written input database as an error
+
 2023-12-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add '--list' command to list the entries of the database in
 	  human-readable format (closes: #9)
